...
        let alert = UIAlertController(title: "\(who) has won!", message: "\(who) Won !!", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: nil))
        self.present(alert, animated: true)
    }
    
    func tie() {
        let tie = UIAlertController(title: "Cats game!", message: "Cats Game ! - Tie", preferredStyle: .alert)
        tie.addAction(UIAlertAction(title: "Ok", style: .default, handler: nil))
        self.present(tie, animated: true)
    }
}

